[package]
name = "polkadot-service"
version = "0.8.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
westend-runtime = { path = "../runtime/westend" }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-api = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-runtime = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-blockchain = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-core = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-client-api = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-client-db = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-chain-spec = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-executor = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-consensus = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-network = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-trie = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
consensus_common = { package = "sp-consensus", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
inherents = { package = "sp-inherents", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
service = { package = "sc-service", git = "https://github.com/mxinden/substrate", branch = "update-prometheus", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-block-builder = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-transaction-pool = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-transaction-pool = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sc-keystore = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
pallet-babe = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
pallet-staking = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
pallet-im-online = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
babe = { package = "sc-consensus-babe", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-block-builder = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
frame-system-rpc-runtime-api = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
sp-session = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
frame-benchmarking = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/mxinden/substrate", branch = "update-prometheus" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = ["consensus"]
