[package]
name = "polkadot-transaction-pool"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3.0"
error-chain = "0.12"
parking_lot = "0.4"
polkadot-api = { path = "../api" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-codec = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-extrinsic-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-runtime-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
ed25519 = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
