[package]
name = "polkadot-validation"
version = "0.8.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
futures = "0.3.8"
log = "0.4.13"
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
thiserror = "1.0.23"

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
