[package]
name = "polkadot-validation"
version = "0.8.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
futures = "0.3.8"
log = "0.4.11"
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
thiserror = "1.0.22"

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-staking-OCW-rerun-dryrun" }
