[package]
name = "xcm"
description = "The basic XCM datastructures."
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bounded-collections = { version = "0.1.5", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = [ "use_core" ] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { version = "3.4.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-weights = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
xcm-procedural = { path = "procedural" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
hex = "0.4.3"
hex-literal = "0.4.1"

[features]
default = ["std"]
wasm-api = []
std = [
	"bounded-collections/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-weights/std",
]
