[package]
name = "xcm"
description = "The basic XCM datastructures."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bounded-collections = { version = "0.1.8", default-features = false, features = ["serde"] }
derivative = { version = "2.2.0", default-features = false, features = [ "use_core" ] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["serde"] }
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"] }
xcm-procedural = { path = "procedural" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
hex = "0.4.3"
hex-literal = "0.4.1"

[features]
default = ["std"]
wasm-api = []
std = [
	"bounded-collections/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-weights/std",
]
