[package]
name = "erasure_coding_fuzzer"
version = "0.1.0"
authors = ["Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polkadot-erasure-coding = {path = ".."}
honggfuzz = "0.5"
primitives = { package = "polkadot-primitives", path = "../../primitives/" }

[[bin]]
name = "reconstruct_fuzzer"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]