[package]
name = "erasure_coding_fuzzer"
version = "0.9.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
polkadot-erasure-coding = { path = ".." }
honggfuzz = "0.5"
primitives = { package = "polkadot-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
