[package]
name = "erasure_coding_fuzzer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
polkadot-erasure-coding = { path = ".." }
honggfuzz = "0.5"
polkadot-primitives = { path = "../../primitives" }
primitives = { package = "polkadot-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
