[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-consensus-beefy = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates", default-features = false }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "lexnv/bump_sp_crates", default-features = false }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
